# rust_book

./: 404.html  Cargo.toml  README.md  demo.html  test.txt
advanced_feature/: Cargo.toml
advanced_feature/src/: advanced_function.rs  advanced_trait.rs  macro_demo.rs  main.rs  unsafe_rust.rs
auto_test/src/: lib.rs
closure_iterator/src/: closure_demo.rs  iterator_demo.rs  main.rs
common_collection/: Cargo.toml
common_collection/src/: main.rs
common_programming_concepts/src/: main.rs  variable_function.rs  word_counter.rs
conurrent_parallel/: Cargo.toml
conurrent_parallel/src/: channel_demo.rs  main.rs  mutex_demo.rs  thread_demo.rs
enums_pattern_matching/src/: enum_demo.rs  main.rs  option_demo.rs
error_handling/src/: handle_error.rs  main.rs  renturn_error.rs
generictypes_traits_lifetimes/: Cargo.toml
generictypes_traits_lifetimes/src/: generic_type.rs  lifetime.rs  main.rs  trait_demo.rs
guessing_game/src/: main.rs
mini_grep/src/: lib.rs  main.rs
mini_webserver/: Cargo.toml
mini_webserver/src/: lib.rs  main.rs
object_oriented/src/: main.rs  state_pattern.rs  state_pattern_rust.rs
ownership/src/: main.rs
stmart_pointer/: Cargo.toml
stmart_pointer/src/: box_demo.rs  main.rs  rc_demo.rs  rc_refcell_demo.rs  refcell_demo.rs  weak_demo.rs
structs/src/: main.rs  rectangle_demo.rs  struct_demo.rs  word_counter.rs
