[workspace]
members=[
    "hello_world",
    "guessing_game",
    "common_programming_concepts",
    "ownership",
    "structs",
    "enums_pattern_matching",
    "common_collection",
    "error_handling",
    "generictypes_traits_lifetimes",
    "auto_test",
    "mini_grep",
    "closure_iterator",
    "stmart_pointer",
    "conurrent_parallel",
    "object_oriented",
    "advanced_feature",
    "mini_webserver",
]